# csv-profiler

./: .gitignore  README.md  README_old.md  app.py  csv_upload_app.py  pyproject.toml
bootcamp/: app.py  pyproject.toml  requirements.txt
bootcamp/data/: employees.csv  sample.csv
bootcamp/src/: main.py
bootcamp/src/csv_profiler/: cli.py  models.py  profile.py
data/: sample.csv
day2/: get_columns.py  is_missing.py
output/: iris_profile.json  iris_profile.md
src/: main.py
src/csv_profiler/: cli.py  io.py  profile.py  render.py
