[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bootcamp"
version = "0.1.0"
description = "CSV file profiler and data quality analyzer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SDAIA Bootcamp", email = "bootcamp@example.com"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "pylint>=2.17",
]

[tool.setuptools]
packages = ["csv_profiler"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
python-preference = "only-managed"
